@@ -9,6 +9,7 @@ contains
     implicit none
     integer :: i
     integer, codimension[*] :: a
+    ! { dg-excess-errors "sorry, unimplemented: directive not yet implemented" }
     !$acc declare device_resident (a)
     !$acc data copy (a)
     !$acc end data
@@ -16,6 +17,7 @@ contains
     !$acc end data
     !$acc parallel private (a)
     !$acc end parallel
+    ! { dg-excess-errors "sorry, unimplemented: directive not yet implemented" }
     !$acc host_data use_device (a)
     !$acc end host_data
     !$acc parallel loop reduction(+:a)
@@ -32,4 +34,3 @@ contains
     !$acc update self (a)
   end subroutine oacc1
 end module test
-! { dg-prune-output "ACC cache unimplemented" }
